--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Mobile-Dev-Challenge</string>
+    <string name="welcome_home">Welcome home</string>
+    <string name="smarty">Smarty</string>
+    <string name="continue_btn">Continue</string>
 </resources>
